--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {   /* to reset margin<padding and bg color */
+    margin: 0;
+    padding: 0;
+    color: rgba(255, 255, 255);
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app-container {
+    background-image: url("./images/zelda-background.jpg");
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(255,255,255,0.05);
+}
+
+.footer-container {
+    background-color: rgba(255,255,255,0.05);
+}
+
+.footer-container p {
+    margin: 30px;
+}
+
+.rupee-container, .hearts-container {
+    display: flex;
+    margin: 20px;
+}
+
+.rupee-image {
+    height: 20px;
+}
+
+.heart-container {
+    transform: scale(0.6);
+}
+
+.heart {
+    position: relative;
+    top: 5px;
+    width: 20px;
+    animation: pulse 4s ease infinite;
+} 
+
+@keyframes pulse {
+    0% { transform: scale(1)}
+    50% { transform: scale(1.3)}
+    100% { transform: scale(1)}
 }
